Update to v2.7: Added logging, added CLI options for search results export and logging, refactored code, added type hints and docstrings, edited console outputs, added TOC in docs

--- a/example_config.toml
+++ b/example_config.toml
@@ -1,9 +1,9 @@
 [Local_file_system]
-data_directory = ''
+data_directory = '' # This is where the data is downloaded to
 
 [OADS_credentials]
 username = 'your_username'
-password = """your_password""" # use triple quotation marks to allow for special characters
+password = """your_password""" # Use triple quotation marks to allow for special characters
 # You need to comment out or remove all collections to which you do not have access rights to
 collections = [
     'EarthCAREAuxiliary',     # EarthCARE Auxiliary Data for Cal/Val Users
